examples/legacy/invalid_scl/type_error_cast.scl
rel S(a) :- a == "str" as bool
